version 0.53

bugfixes:
- fixed handling of debugger context change, e.g. on call stack
- fixed selection and text edit colors

additions:
- expression error in Type column
- context menus for variables

version 0.52

bugfixes:
- fixed visualization when user-defined point was defined incorrectly
- fixed visualization of collections with empty elements
- fixed normalization of angles

version 0.51

additions:
- handling of C++ const, volatile and reference variables

version 0.50

additions:
- support for Visual Studio 2022

breaking changes:
- dropped support for Visual Studio 2013, 2015, 2017 and 2019

version 0.34

bugfixes:
- fixed validity checks of user-defined types
- fixed visualization of some types with VS2019, e.g. Boost.Geometry segment and rtree

version 0.33

additions:
- support for user-defined Segment, Ray and Line
- support for Visual Basic array and List and basic data types (without direct memory access)
- loading time message window no longer blocks loading
- containers of geometries use color of the elements in GraphicalWatch

version 0.32

additions:
- support for Type pattern in user-defined classes
- support for user-defined coordinate systems and units
- support for base classes of known types in C#, e.g. IList<>
- support for user-defined Boxes
- added enabling/disabling of geometries and plots
- added changing of colors of geometries and plots
- improvement of list editing, single click edit
- implemented direct memory loading of Boost.Geometry R-tree
- implemented direct memory loading of containers of geometries
- various other loading optimizations

version 0.31

bugfixes:
- fixed issue with user-defined containers element type expected to be the first template argument
- fixed issue with user-defined containers not updated after change in XML file 

version 0.30

additions:
- support for user-defined Container based on Array or LinkedList
- support for user-defined MultiGeometry
- support for C# LinkedList<>