@@ -150,15 +150,19 @@ namespace GraphicalDebugging
 
         private void dataGrid_PreviewKeyDown(object sender, System.Windows.Input.KeyEventArgs e)
         {
+            if (m_isDataGridEdited)
+                return;
+
             if (e.Key == System.Windows.Input.Key.Delete)
             {
-                if (m_isDataGridEdited)
-                    return;
-
                 Util.RemoveDataGridItems(dataGrid, Geometries,
                     (int selectIndex) => ResetAt(new GeometryItem(), selectIndex),
                     (GeometryItem geometry) => m_colorIds.Push(geometry.ColorId),
                     () => UpdateItems(false));
+            }
+            else if (e.Key == System.Windows.Input.Key.V && e.KeyboardDevice.Modifiers.HasFlag(System.Windows.Input.ModifierKeys.Control))
+            {
+                Util.PasteDataGridItemFromClipboard(dataGrid, Geometries);
             }
         }
 
